# src/transactions/dto/update-transaction.dto.ts
@@ -1,12 +1,19 @@
-import { ApiPropertyOptional } from '@nestjs/swagger';
+import { ApiPropertyOptional, PartialType } from '@nestjs/swagger';
 import { IsOptional, IsString } from 'class-validator';
+import { CreateTransactionItemDto } from './create-transaction-item.dto';
+import { CreateTransactionDto } from './create-transaction.dto';
 
-export class UpdateTransactionDto {
-  @ApiPropertyOptional({
-    description:
-      'Only the note can be edited after creation. Editing type/amount/items is not supported because it would desynchronize inventory.',
-  })
-  @IsOptional()
-  @IsString()
-  note?: string;
-}
+export class UpdateTransactionDto
+  extends PartialType(
+    CreateTransactionDto,
+  ) { }
+//  {
+//   @ApiPropertyOptional({
+//     example: 'Updated note for this transaction',
+//     description:
+//       'Only the note can be edited after creation. Editing type/amount/items is not supported because it would desynchronize inventory.',
+//   })
+//   @IsOptional()
+//   @IsString()
+//   note?: string;
+// }
